hive-macro/tests/macro/should_fail/function_argument_amount.rs
#[hive_macro::hive_test]
fn test(arg1: u8, arg2: u8, arg3: u8) {}

fn main() {}
